# controller

./: .gitignore  Cargo.toml  LICENSE  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220907_223615_create_users.rs  m20220907_223632_create_sessions.rs  m20220907_223633_create_teams.rs  m20220907_223634_create_team_members.rs  m20220907_223637_create_zones.rs  m20220907_223639_create_records.rs  m20220907_223653_create_proxies.rs  m20220908_204553_create_clients.rs  m20220913_213320_create_certificates.rs  m20220914_000156_add_certificates_proxy.rs  m20220914_000706_add_certificates_client.rs
src/: main.rs
src/cert/: generate.rs  mod.rs
src/dns/: records.rs
src/entities/: certificate.rs  client.rs  controller.rs  mod.rs  prelude.rs  proxy.rs  record.rs  session.rs  team.rs  team_member.rs  user.rs  zone.rs
src/routes/: status.rs
src/routes/auth/: delete.rs  list_sessions.rs  login.rs  register.rs
src/routes/users/: logout.rs  mod.rs
src/rpc/: mod.rs
src/util/: auth.rs  mod.rs
