[package]
name = "driptorch-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "0.9.2"
migration = { version = "0.1.0", path = "./migration"}

futures = "0.3.24"
dotenv = "0.15.0"

serde = { version = "1.0.144", features = ["derive"] }
rmp = "0.8.11"
rmp-serde = "1.1.0"

ulid = "1.0.0"

axum = "0.6.0-rc.1"
tower = "0.4.13"

blake3 = "1.3.1"
base64ct = { version = "1.5.2", features = ["alloc"] }
rand = "0.8.5"

argon2 = "0.4.1"

tokio = { version = "1.21.0", features = ["full"] }

pretty_env_logger = "0.4.0"
log = "0.4.17"

chrono = "0.4.22"

zxcvbn = "2.2.1"

lazy_static = "1.4.0"

regex = "1.6.0"

async-trait = "0.1.57"

user-agent-parser = "0.3.3"

lapin = "2.1.1"